Continued clean-up work